--- a/css/index.html
+++ b/css/index.html
@@ -7,6 +7,17 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <header>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <a class="cta" href="#"><button>Contact Us</button></a>
+        </header>
         <div class="card">
             <img src="https://via.placeholder.com/150" alt="Card Image">
             <h2>Card Title</h2>
