Hover Effects for Images

--- a/css/index.html
+++ b/css/index.html
@@ -24,5 +24,11 @@
             <p>This is a simple card description.</p>
             <button>Read More</button>
         </div>
+
+        <div class="gallery">
+            <img src="https://via.placeholder.com/200" alt="Gallery Image 1">
+            <img src="https://via.placeholder.com/200" alt="Gallery Image 2">
+            <img src="https://via.placeholder.com/200" alt="Gallery Image 3">
+        </div>
     </body>
 </html>
