--- a/css/index.html
+++ b/css/index.html
@@ -30,5 +30,6 @@
             <img src="https://via.placeholder.com/200" alt="Gallery Image 2">
             <img src="https://via.placeholder.com/200" alt="Gallery Image 3">
         </div>
+        <button class="animated-button">Hover Me</button>
     </body>
 </html>
