--- a/cssgrid/index.html
+++ b/cssgrid/index.html
@@ -7,11 +7,19 @@
     <link rel="stylesheet" href="styles.css">    
 </head>
 <body>
-    <div class="grid-container">
+    <!-- <div class="grid-container">
         <div class="grid-item">1</div>
         <div class="grid-item">2</div>
         <div class="grid-item">3</div>
         <div class="grid-item">4</div>
+    </div> -->
+
+    <div class="grid-container">
+        <div class="header">Header</div>
+        <div class="sidebar">Sidebar</div>
+        <div class="content">Main Content</div>
+        <div class="footer">Footer</div>
     </div>
+
 </body>
 </html>
