--- a/css/Sass/test1/index.html
+++ b/css/Sass/test1/index.html
@@ -10,5 +10,14 @@
     <header>
         <h1>Welcome to Sass Variables</h1>
     </header>
+
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
 </body>
 </html>
