sass Using Mixins

--- a/css/Sass/test1/index.html
+++ b/css/Sass/test1/index.html
@@ -19,5 +19,9 @@
         </ul>
     </nav>
 
+    <div class="button-container">
+        <button class="primary">Primary Button</button>
+        <button class="secondary">Secondary Button</button>
+    </div>
 </body>
 </html>
